fix portf wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -331,11 +331,9 @@ img {
   justify-content: center;
   width: 100%;
   height: 100%;
-
-  border-radius: 50%;
 }
 
-.social-link-icon {
+.social-link-icon a {
   fill: #f4f4fd;
   display: flex;
   background-color: #4d5ae5;
@@ -347,11 +345,11 @@ img {
 }
 .social-link {
 }
-.social-links:hover {
+.social-links a:hover {
   background-color: #404bbf;
 }
 
-.social-links:focus {
+.social-links a:focus {
   background-color: #404bbf;
 }
 
@@ -380,6 +378,9 @@ img {
   flex-wrap: wrap;
   gap: 48px 24px;
   margin-top: 0;
+}
+
+.portfolio-list-wrap {
 }
 
 .portfolio-item {
@@ -413,18 +414,8 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.app-category-name {
-  padding: 32px 16px;
-  border: 1px solid #e7e9fc;
-  border-top: none;
-}
 
-.app-container {
-  position: relative;
-  overflow: hidden;
-}
-
-.app-text {
+.portfolio-text-hover {
   position: absolute;
   top: 0;
   font-size: 16px;
